Cambio pantalla termina

--- a/vista-principal/styles_cards.css
+++ b/vista-principal/styles_cards.css
@@ -147,8 +147,28 @@ h2 {
   border-radius: .25rem;
 }
 
+.cardh {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+  height: max-content;
+}
+
+
+.card-text {
+  font-family: 'Muli', sans-serif;
+  text-align: -webkit-center;
+  font-size: smaller;
+}
 .mb-4, .my-4 {
-  margin-bottom: 1.5rem!important;
+  margin-bottom: 1rem!important;
+  margin-right: .75rem!important;
 }
 .shadow-sm {
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
@@ -168,9 +188,16 @@ h2 {
   height:267;
 }
 
+.card-img-toph {
+  width: 50%;
+  border-top-left-radius: calc(.25rem - 1px);
+  border-top-right-radius: calc(.25rem - 1px);
+  
+}
+
 .card-body {
   flex: 1 1 auto;
-  padding: 1.25rem;
+  padding: 0.5rem;
 }
 
 
@@ -194,6 +221,7 @@ h2 {
 }
 
 .btn-group {
+
   position: relative;
   display: inline-flex;
   vertical-align: middle;
@@ -211,14 +239,14 @@ h2 {
   font-size: 16px;
   line-height: 1.5;
   border-radius: .2rem;
-  height: 30px;
-  width: 30px;
+  height: auto;
+  width: -webkit-fill-available;
   color: #4792D1;
 }
 
 
 .btn--img {
-  width: 25px;
+  width: 1.25rem;
 }
 
 .button {
@@ -323,7 +351,7 @@ h2 {
   font-size: 16px;
   height: 30px;
   outline: none;
-  width: 60px;
+  width: 40px;
 }
 
 ::placeholder {
